<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.HomeFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/_5sdp"
        android:backgroundTint="@color/color_primary"
        app:cardElevation="@dimen/_5sdp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold"
                android:text="@string/home_title" />

            <ImageView
                android:id="@+id/ibMore"
                android:layout_width="wrap_content"
                android:layout_height="300dp"
                android:layout_gravity="top|end"
                android:layout_margin="@dimen/_5sdp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/image_contentDescription"
                android:scaleType="fitXY"
                android:src="@drawable/ic_bored" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="35sp"
                android:textStyle="bold"
                android:text="@string/home_title1"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>